@@ -103,7 +103,8 @@ typedef enum
 	CL_FOCUS_SCALE,
 	CL_FOCUS_TAB,
 	CL_FOCUS_COLOR_WHEEL_DARK,
-	CL_FOCUS_COLOR_WHEEL_LIGHT
+	CL_FOCUS_COLOR_WHEEL_LIGHT,
+	CL_FOCUS_UNKNOWN
 } ClearlooksFocusType;
 
 
