@@ -2,6 +2,16 @@
 
 	* engines/clearlooks/src/clearlooks_draw_gummy.c:
 	(clearlooks_gummy_draw_focus):
+	* engines/clearlooks/src/clearlooks_style.c:
+	(clearlooks_style_draw_focus):
+	* engines/clearlooks/src/clearlooks_types.h:
+	Added CL_FOCUS_UNKNOWN and exit the focus drawing function
+	for it
+
+2007-12-09  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
+	* engines/clearlooks/src/clearlooks_draw_gummy.c:
+	(clearlooks_gummy_draw_focus):
 	Implemented focus_button_flat custom drawing
 
 2007-12-09  Benjamin Berg  <benjamin@sipsolutions.net>
